--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "build":"npx parcel build index.js"
+    "build": "npx parcel build index.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,8 @@
     "standard": "^14.3.1"
   },
   "standard": {
-    "env": [ "jest" ]
+    "env": [
+      "jest"
+    ]
   }
 }
