--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "build": "npx parcel build index.js"
+    "build":"npx parcel build index.js",
+    "lint": "npx standard --fix"
   },
   "repository": {
     "type": "git",
@@ -24,8 +25,6 @@
     "standard": "^14.3.1"
   },
   "standard": {
-    "env": [
-      "jest"
-    ]
+    "env": [ "jest" ]
   }
 }
